# heekkr-proto

./: .gitignore
.github/workflows/: gradle-publish.yml  python-publish.yml  rust-publish.yml  web-publish.yml
java/: build.gradle.kts  settings.gradle.kts
java/buildSrc/src/main/kotlin/: Versions.kt
java/lib/: build.gradle.kts
java/lib/src/main/kotlin/kr/heek/proto/: Library.kt
protos/: book.proto  common.proto  library.proto  resolver.proto
protos/heekkr/: api.proto  book.proto  common.proto  holding.proto  library.proto  resolver.proto
python/: .gitignore  README.md  generate.py  pyproject.toml
rust/: Cargo.toml  build.rs
web/: .gitignore  .npmignore  .pnp.cjs  index.js  package.json
