[tool.poetry]
name = "heekkr"
version = "0.0.0"
description = ""
authors = ["jangjunha <hi@jangjunha.me>"]
readme = "README.md"
packages = [{include = "heekkr"}]
include = ["heekkr/*"]

[tool.poetry.dependencies]
python = "^3.8"
protobuf = "^4.24.0"
grpcio = "^1.57.0"

[tool.poetry.build]
generate-setup-file = false
script = "generate.py"

[build-system]
requires = ["poetry-core", "grpcio-tools"]
build-backend = "poetry.core.masonry.api"
